--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@basixjs/node-rs-loader",
+  "type": "module",
+  "source": "",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.modern.js"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.module.js",
   "packageManager": "yarn@3.1.0",
   "devDependencies": {
-    "microbundle": "^0.14.1"
+    "microbundle": "^0.14.1",
+    "typescript": "^4.4.4",
+    "webpack": "^5.60.0"
+  },
+  "peerDependencies": {
+    "webpack": "^4.0.0 || ^5.0.0"
   }
 }
