--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@basixjs/node-rs-loader",
   "type": "module",
-  "source": "",
+  "source": "./src/index.ts",
   "exports": {
     "require": "./dist/index.cjs",
     "default": "./dist/index.modern.js"
@@ -17,6 +17,7 @@
   },
   "packageManager": "yarn@3.1.0",
   "devDependencies": {
+    "@types/loader-utils": "^2.0.3",
     "@types/node": "^16.11.6",
     "microbundle": "^0.14.1",
     "typescript": "^4.4.4",
@@ -24,5 +25,9 @@
   },
   "peerDependencies": {
     "webpack": "^4.0.0 || ^5.0.0"
+  },
+  "dependencies": {
+    "@napi-rs/triples": "^1.0.3",
+    "loader-utils": "^3.0.0"
   }
 }
