--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "engines": {
     "node": ">=12.9.0"
   },
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "packageManager": "yarn@3.1.0",
   "devDependencies": {
     "@node-rs/xxhash": "^1.0.0",
